--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clearvision",
+  "name": "spooky",
   "version": "6.0.0",
   "description": "Highly customizable theme for BetterDiscord.",
   "private": true,
